--- a/index.html
+++ b/index.html
@@ -24,6 +24,10 @@
         <div id="searchbar">
             <form>
                 <input type="text">
+                <div id="buttons">
+                    <button type="submit">Google Search</button>
+                    <button type="submit">I'm Feeling Lucky</button>
+                </div>
             </form>
         </div>
         
